--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        
+        <i>Check the console. Ctrl + Shift + J for chrome</i>
         <script src="./sort.js" async defer></script>
     </body>
 </html>
